// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipient Verification Lists Reducer default 1`] = `
Object {
  "email": undefined,
  "errors": undefined,
  "list": Array [],
  "loading": false,
  "results": false,
  "valid": undefined,
}
`;

exports[`Recipient Verification Lists Reducer when ticket creation is pending 1`] = `
Object {
  "email": undefined,
  "errors": undefined,
  "list": Array [],
  "loading": true,
  "results": false,
  "singleResults": undefined,
  "valid": undefined,
}
`;

exports[`Recipient Verification Lists Reducer when verification fails 1`] = `
Object {
  "email": undefined,
  "errors": Object {
    "meta": undefined,
    "payload": Object {
      "message": "Oh no!",
    },
  },
  "list": Array [],
  "loading": false,
  "results": false,
  "singleResults": undefined,
  "valid": undefined,
}
`;

exports[`Recipient Verification Lists Reducer when verification successfully returns invalid address 1`] = `
Object {
  "email": undefined,
  "errors": undefined,
  "list": Array [],
  "loading": false,
  "results": false,
  "singleResults": Object {
    "email": "invalid@address.com",
    "reason": undefined,
    "valid": undefined,
  },
  "valid": undefined,
}
`;

exports[`Recipient Verification Lists Reducer when verification successfully returns valid address 1`] = `
Object {
  "email": undefined,
  "errors": undefined,
  "list": Array [],
  "loading": false,
  "results": false,
  "singleResults": Object {
    "email": "valid@address.com",
    "reason": undefined,
    "valid": undefined,
  },
  "valid": undefined,
}
`;
